--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:url"           content="https://https://cruzn978.github.io/portfolio-website/#/index.html" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="nc | software engineer" />
+    <meta property="og:description"   content="" />
+    <meta property="og:image:secure"         content="" />
     <title>nc | software engineer</title>
   </head>
   <body>
