--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"/> public/favicon-16x16.png -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,11 +29,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:url"           content="https://https://cruzn978.github.io/portfolio-website/#/index.html" />
+    <meta property="og:image" content="/portfolio-website/static/media/portfolio-img.1bd1093f.png" alt="meta">">
+    <meta property="og:url"           content="https://https://cruzn978.github.io/portfolio-website/#/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="nc | software engineer" />
-    <meta property="og:description"   content="" />
+    <meta property="og:description"   content="Nichole's portfolio website, come and see!" />
     <meta property="og:image:secure"         content="" />
+    <meta name="twitter:card" content="summary_large_image">
     <title>nc | software engineer</title>
   </head>
   <body>
