--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:image" content="/portfolio-website/static/media/portfolio-img.1bd1093f.png" alt="meta">">
+    <meta property="og:image" content="/portfolio-website/static/media/portfolio-img.1bd1093f.png" alt="meta">
     <meta property="og:url"           content="https://https://cruzn978.github.io/portfolio-website/#/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="nc | software engineer" />
